# my-mle-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ansible-vault.txt  config.ini  data.dvc  decode.py  docker-compose.yml  encode.py  example.ini  push_check  pyproject.toml  requirements.txt  secrets.yml  setup.py
CD/: Jenkinsfile  docker-compose.yml
CI/: Jenkinsfile
data/: test_X.csv  test_y.csv  train_X.csv  train_y.csv
notebooks/: utils.ipynb
secrets/: db.yml
src/: app.py  db_connection.py  kafka_connection.py  predict.py  secrets.py  split.py  split_datasets.py  train.py
src/unit_tests/: test_src.py
tests/: api_test.py  test_0.json  test_1.json  test_2.json  test_src.py
